--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,20 @@
             <version>4.13.1</version>
             <scope>compile</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.16.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+
     </dependencies>
 
 
